[gd_scene load_steps=10 format=3 uid="uid://bigty3wy12n1x"]

[ext_resource type="Script" path="res://KnightNpc.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://h77wm4inwbut" path="res://Sprites/mysteriousshadow.png" id="2_osqd6"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="3_hn4cs"]
[ext_resource type="PackedScene" uid="uid://b0vdk2an76gy6" path="res://ExclamationMark.tscn" id="4_ew0rk"]
[ext_resource type="PackedScene" uid="uid://tqprdqp60578" path="res://HealthBar.tscn" id="14"]
[ext_resource type="Texture2D" uid="uid://bhvvd7kx3ikh8" path="res://Sprites/knight.png" id="18"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cbic5"]
radius = 15.0333

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cloug"]
shader = ExtResource("3_hn4cs")
shader_parameter/outline_width = 1.0
shader_parameter/outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="OccluderPolygon2D" id="4"]
polygon = PackedVector2Array(-11, -7, -14, -5, -13, 0, -14, 5, -14, 5, -14, 5, -13, 10, -7, 15, -5.25093, 21.2938, 7, 17, 4, 16, 3, 9, 2, 7, 1, 3, -1, -1, -4, -4, -8, -3, -8, -4)

[node name="Npc" type="CharacterBody2D"]
collision_layer = 7
collision_mask = 7
input_pickable = true
script = ExtResource("2")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 6)
texture = ExtResource("2_osqd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 8)
shape = SubResource("CircleShape2D_cbic5")

[node name="Timer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("14")]
offset_left = 2.08165e-12
offset_top = -15.0
offset_right = 2.08165e-12
offset_bottom = -15.0
scale = Vector2(0.2, 0.2)

[node name="EnemyNavAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
path_max_distance = 10.0

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cloug")
position = Vector2(2.08165e-12, 7)
texture = ExtResource("18")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(8, 5)
rotation = 0.511381
occluder = SubResource("4")

[node name="ExclamationMark" parent="." instance=ExtResource("4_ew0rk")]
position = Vector2(2.08165e-12, -30)

[connection signal="input_event" from="." to="." method="_on_Enemy_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
